--- a/app/utils.css
+++ b/app/utils.css
@@ -56,6 +56,10 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .gap-4 {
     gap: 1rem;
 }
